--- a/packages/swipe/src/swipe.scss
+++ b/packages/swipe/src/swipe.scss
@@ -317,7 +317,7 @@
     padding: 0px 20px 20px 20px;
     flex-shrink: 0;
     color: #000;
-
+    z-index: 1;
   }
 
   .swipe-info-btn {
